--- a/homebridge.service
+++ b/homebridge.service
@@ -10,6 +10,8 @@ WorkingDirectory=/home/pi/src/light-control
 ExecStart=/bin/bash -c "/usr/bin/homebridge"
 StandardOutput=syslog
 StandardError=syslog
+Restart=always
+RestartSec=3
 
 [Install]
 WantedBy=multi-user.target
