Add autorestart for lightcontrol

--- a/lightcontrol.service
+++ b/lightcontrol.service
@@ -10,6 +10,8 @@ WorkingDirectory=/home/pi/src/light-control
 ExecStart=/bin/bash -c "FLASK_APP=lightcontrol.server ./venv/bin/flask run  --with-threads -h 0.0.0.0 -p 6001"
 StandardOutput=syslog
 StandardError=syslog
+Restart=always
+RestartSec=3
 
 [Install]
 WantedBy=multi-user.target
