kitchen light config

--- a/homebridge-config.json
+++ b/homebridge-config.json
@@ -67,5 +67,11 @@
     ],
 
 
-    "platforms": [] 
+    "platforms": [
+        {
+            "platform": "TplinkSmarthome",
+            "name": "TplinkSmarthome",
+            "switchModels": ["HS200"]
+        }
+    ] 
 }
